apps/seedbox/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seedbox-transmission-ingress
  labels:
    app.kubernetes.io/name: seedbox
    app.kubernetes.io/instance: seedbox
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/app-root: /web/
spec:
  tls:
  - hosts:
    - "transmission.${INGRESS_INTERNAL_NAME}"
    secretName: transmission-k8s-cert
  rules:
  - host: transmission.${INGRESS_INTERNAL_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: seedbox-transmission-service
            port:
              name: trs-http
